[package]
name = "graphannis-malloc_size_of_derive"
version = "1.0.0"
authors = ["The Servo Project Developers", "Thomas Krause <thomaskrause@posteo.de>"]
license = "Apache-2.0"
description = "This is a fork of the `malloc_size_of_derive` crate, which is part of the Servo codebase, to make it available to the graphANNIS corpus search library as dependency."
repository= "https://github.com/corpus-tools/graphannis-malloc_size_of_derive"
readme = "README.md"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "0.6"
syn = { version = "0.15", features = ["full"] }
synstructure = "0.11"
